--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ env/
 # Python .pyc files
 __pycache__/
 
-# For testing cache
+# For testing cache, also go download your own.
 cache/
+
+# API secrets
+config/*.token
