single card info finished, added exception handling+logging

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "call_name": "~deckbot-dev",
     "cache_dir": "./cache",
-    "logging_level": "debug",
+    "logging_level": 10,
     "iterations": 10000
 }
