Correct card is now found if cards have very similar names

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-    "call_name": "~deckbot-dev",
+    "call_name": "~dev-deckbot",
     "cache_dir": "./cache",
     "logging_level": 10,
     "iterations": 10000,
