--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,6 @@
     "iterations": 10000,
     "logging_directory": "./logs",
     "logging_max_file_size": 10000000,
-    "logging_backup_count": 5
+    "logging_backup_count": 5,
+    "mtg_keywords_file": "./config/mtg-keyword-defs.json"
 }
