--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==20.3.0
+beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
 cycler==0.10.0
@@ -19,6 +21,7 @@ requests==2.25.1
 scipy==1.6.2
 seaborn==0.11.1
 six==1.15.0
+soupsieve==2.2.1
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 yarl==1.6.3
